2004-12-20  Alexander Larsson  <alexl@redhat.com>

	* src/cairo_xlib_surface.c (_cairo_xlib_surface_create_with_size):
	Fix bug in earlier change.

2004-12-20  Carl Worth  <cworth@cworth.org>

	* src/cairoint.h: Re-enabled __internal_linkage for all internal
	functions. Now avoid the warning by moving the * from the return
	type after the __internal_linkage macro. It looks awaful, but it
	keeps the compiler quiet.

2004-12-20  Alexander Larsson  <alexl@redhat.com>

	* src/cairoint.h:
	Add _cairo_gstate_restore_external_state, _cairo_fixed_integer_floor
	and _cairo_fixed_integer_ceil.
	
	* src/cairo.c: (cairo_restore):
	Call _cairo_gstate_restore_external_state on restore.
	
	* src/cairo_cache.c: (_cache_lookup):
	Fix cache-misses.
	
	* src/cairo_fixed.c: (_cairo_fixed_integer_floor),
	(_cairo_fixed_integer_ceil):
	Implement floor and ceil
	
	* src/cairo_gstate.c:
	(_cairo_gstate_restore_external_state):
	Restore surface clip region on restroe.
	
	(_calculate_region_for_intermediate_clip_surface),
	(_cairo_gstate_clip_and_composite_trapezoids),
	(_cairo_gstate_show_surface), (_cairo_gstate_show_glyphs):
	Create intermediate clip surfaces of the minimal required
	size.

2004-12-20  Carl Worth  <cworth@cworth.org>

	* AUTHORS: Add Alexander Larsson to AUTHORS list.

	* src/cairo_xlib_surface.c (_cairo_xlib_surface_create_with_size):
	Split off from _cairo_xlib_surface_create to avoid roundtrip when
	size is already known.
	(cairo_xlib_surface_create): Simplified to just call XGetGeometry
	that defer to _cairo_xlib_surface_create_with_size. Add comment
	about remaining roundtrip and possible plans to eliminate it later
	with a new interface requiring width/height.
	Thanks to Alexander Larsson  <alexl@redhat.com>.

	* test/text_cache_crash.c (draw): Disabled test that was killing
	my machine for some reason. Scary.

2004-12-20  Carl Worth  <cworth@cworth.org>

	* src/cairo_image_surface.c
	(_cairo_image_abstract_surface_create_pattern): Change return