@@ -1,3 +1,8 @@
+2004-12-20  Carl Worth  <cworth@cworth.org>
+
+	* autogen.sh (LANG): Change "head -1" to more standard "head -n
+	1".
+
 2004-12-20  Alexander Larsson  <alexl@redhat.com>
 
 	* src/cairo_xlib_surface.c (_cairo_xlib_surface_create_with_size):
